# RocSync

./: .gitignore  README.md
fw/: README.md  platformio.ini
fw/src/: funconfig.h  main.c  main.cpp
hw/: .gitignore  README.md  RocSync_testing.kicad_pcb  RocSync_testing.kicad_pro  RocSync_testing.kicad_sch  corner.kicad_sch  counter.kicad_sch  custom_symbols.kicad_sym  place_footprints.ini  ring_segment.kicad_sch  ring_segment_small.kicad_sch  untitled.kicad_sch
hw/3d_models/: RocSync.f3d  cover.step  cover_top.stl  handle.step  top_cover.step  top_cover.stl
hw/custom_footprints.pretty/: HL-A-3528.kicad_mod  XYC-HIR76C-LX4.kicad_mod  orx.kicad_mod  rocsync_handle.kicad_mod
hw/jlcpcb/: project.db
hw/jlcpcb/gerber/: RocSync_testing-CuBottom.gbr  RocSync_testing-CuTop.gbr  RocSync_testing-EdgeCuts.gbr  RocSync_testing-MaskBottom.gbr  RocSync_testing-MaskTop.gbr  RocSync_testing-NPTH.drl  RocSync_testing-PTH.drl  (+2 more)
hw/rev1/: 4leds.kicad_sch  RocSync_testing.kicad_sch_old  corner.kicad_sch
hw/rev2/: RocSync_testing.kicad_pcb  RocSync_testing.kicad_pro  RocSync_testing.kicad_sch  place_footprints.ini
misc/: ftk_geometry_rev1.ini  ftk_geometry_rev2.ini
sw/: README.md  environment.yml  pyproject.toml  result.json  rocsync.py  setup.py  video.py  vision.py
sw/evaluation/: Manual_Temp_Synch.py  README.md  check_time_sync_all.py  clips_config.json  extract_clips_as_png.py  extract_synced_videos.py
sw/rocsync/: ftk.py  main.py  printer.py  regression.py  syncvid.py  video.py  video_statistics.py  vision.py
sw/rocsync/tests/: unittest_process_frame.py
(+33 files in other folders)
