[project]
name = "rocsync"
version = "0.1.0"
description = "RocSync: Temporal Multi-Camera Synchronization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.0",
]

[project.scripts]
rocsync = "rocsync.main:main"
